fixing arrow on mobile

--- a/leaderboard.css
+++ b/leaderboard.css
@@ -312,6 +312,11 @@ body{
         inline-size: 12px;
         margin-right:3vw; 
       }
+      .arrow{
+        width:50px;
+        height:50px; 
+        margin-left:45vw; 
+      }
     
 }
 
